# alpescraft-videos

./: .gitignore  Dockerfile  MAKE_VIDEO.md  README.md  Readme.md  assemble_sources_post_production.ipynb  checklist.md  design.md  docker-compose.yml  ht-jan-0.yml  ht-jan-1.yml  ht-jan-2.yml  ht-jan-3.yml  ht-jan-4.yml  pyproject.toml
docs/: plan-composable-pipeline.md
examples/: example-conf.yml  example-ht-conf.yml  external-sound.yaml  v2.yaml
src/: compose_audio.py  concatenate_fade.py  fetch_talk_info.py  make_examples.py  make_thumbnail.py  merge_audio.py  produce_tracking_example.py  produce_video.py  produce_video_v2.py
src/logic/: ClipSection.py  ConfFileContents.py  MinutesAndSeconds.py  PresentationInfo.py  SoundFile.py  SoundSpec.py  VideoCollageInfo.py  VideoInfo.py  collate_video.py  create_video_with_intro.py  intro.py
src/logic_v2/: ClipSection.py  PresentationInfo.py  SoundFile.py  VideoCollageInfo.py  VideoInfo.py  collate_video.py  intro.py  media_searcher.py  region.py  start_time.py  tracking.py
src/scripts/: create_circular_mask.py
template/alpescraft/amphi_comment-organiser-son-legacy/: config.yml
template/alpescraft/talk-test/: config.yml  speaker.mkv
template/ht/talk1/: config.yml
template/ht/talk2/: config.yml
template/ht/talk3/: config.yml
template/ht/talk4/: config.yml
test/: create_test_video.py  test_creation_time.py  tests.py
test/logic/: test_file_search_strategy.py  test_load_conf.py
test/logic_v2/: test_collate_video.py  test_file_search_strategy.py  test_load_conf.py
test/logic_v2/tracker/: test_tracker.py
test_files/: ht-jan-0.yml  ht-jan-01.m4a
test_files/search-strategy-for-defaults/search-strategy-session/: minimal-conf.yml
to-proceed/talk1/: config.yml
to-proceed/talk2/: config.yml
to-proceed/talk3/: config.yml
to-proceed/talk4/: config.yml
