[tool.poetry]
name = "alpescraft-videos"
version = "0.1.0"
description = ""
authors = ["Johan Martinsson <jma@notsodark.com>"]
readme = "README.md"
packages = [{include = "alpescraft_videos"}]

[tool.poetry.dependencies]
python = "^3.10"
moviepy = "^1.0.3"
pytest = "^7.4.0"
pyaml = "^23.7.0"
pyexiftool = "^0.5.6"
requests = "^2.30.0"
beautifulsoup4 = "^4.12.2"
pyyaml = "^6.0"

[build-system]
requires = ["poetry-core>=1.8.2"]
build-backend = "poetry.core.masonry.api"
