[project]
name = "alpescraft-videos"
version = "0.1.0"
description = ""
requires-python = ">=3.10"
dependencies = [
    "moviepy>=1.0.3,<2",
    "pytest>=7.4.0,<8",
    "pyaml>=23.7.0",
    "pyexiftool>=0.5.6,<1",
    "requests>=2.30.0,<3",
    "beautifulsoup4>=4.12.2,<5",
    "pyyaml>=6.0,<7",
    "typer>=0.4.0,<1",
]

[tool.poetry]
name = "alpescraft-videos"
version = "0.1.0"
description = ""
authors = ["Johan Martinsson <jma@notsodark.com>"]
readme = "README.md"
packages = [{include = "alpescraft_videos"}]

[tool.poetry.dependencies]
python = "^3.10"
moviepy = "^1.0.3"
pytest = "^7.4.0"
pyaml = "^23.7.0"
pyexiftool = "^0.5.6"
requests = "^2.30.0"
beautifulsoup4 = "^4.12.2"
pyyaml = "^6.0"
typer = "^0.4.0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
